# aivc

./: .gitignore  README.md  dummy_test.txt  install.sh  install_dev.sh  patch.js  pyproject.toml  test_perf.py
.agent/rules/: english_code_and_docs.md
docs/: handover_amir_en.md  index_architecture.md  index_sync.md  index_tasks.md
docs/sync/: google_drive_setup.md
docs/tasks/: internationalization_and_english_docs.md  phase10_search_snippets.md  phase11_track_mcp_tool.md  phase12_consulted_files.md  phase13_bm25_and_optimisations.md  phase13_bm25_file_search.md  phase14_commit_context.md  phase15_io_refactoring.md  phase16_fiabilisation_bm25_ux_cli.md  phase17_watched_directories.md  phase19_web_dashboard_ux.md  phase1_versioning_engine.md  phase20_google_drive_sync.md  phase21_async_sync_consolidation.md  phase22_local_hints_optimization.md  phase23_state_sync_reload.md  phase25_native_google_drive.md  phase26_auto_sync_push.md  phase27_remote_hints.md  phase28_io_optimizations.md  phase29.md  phase2_semantic_graph.md  phase30_debt_cleanup.md  phase3_mcp_interface.md  phase4_cli_and_dashboard.md  phase5_stabilization.md  phase6_absolute_paths_fix.md  phase7_scoped_search.md  phase8_gemini_injection.md  phase9_cli_exposure.md
scripts/: demo_remote_sync.py  migrate_commit_paths.py
src/aivc/: __init__.py  cli.py  config.py  server.py
src/aivc/core/: __init__.py  blob_store.py  commit.py  diff.py  index.py  memory.py  workspace.py
src/aivc/search/: bm25_cache.py
src/aivc/semantic/: __init__.py  engine.py  graph.py  indexer.py  searcher.py
src/aivc/sync/: background.py  drive.py  sync.py
src/aivc/web/: dashboard.py
src/aivc/web/static/: index.html
src/tests/: conftest.py  test_blob_store.py  test_bm25_cache.py  test_cli.py  test_commit.py  test_config.py  test_dashboard.py  test_diff.py  test_engine.py  test_graph.py  test_index.py  test_indexer.py  test_memory.py  test_migrate.py  test_phase12.py  test_phase23_reload.py  test_searcher.py  test_server.py  test_server_watcher.py  test_workspace.py
