[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aivc"
version = "0.1.0"
description = "AI Version Control — long-term memory server for LLM agents"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.scripts]
aivc = "aivc.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
semantic = [
    "chromadb>=0.6",
    "sentence-transformers>=3.0",
    "transformers>=4.30,<5.0",
    "mcp>=1.0",
    "rank-bm25>=0.2.0",
    "watchdog>=4.0.0",
]
sync = [
    "google-api-python-client>=2.0",
    "google-auth-httplib2>=0.1",
    "google-auth-oauthlib>=1.0",
]
all = [
    "pytest>=8.0",
    "chromadb>=0.6",
    "sentence-transformers>=3.0",
    "transformers>=4.30,<5.0",
    "mcp>=1.0",
    "rank-bm25>=0.2.0",
    "watchdog>=4.0.0",
    "google-api-python-client>=2.0",
    "google-auth-httplib2>=0.1",
    "google-auth-oauthlib>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
markers = [
    "requires_ml: marks tests that need sentence-transformers and chromadb (use --run-ml to include)",
]
